--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="username">Username</string>
     <string name="register">Register</string>
     <string name="user_registration">User Registration</string>
+    <string name="attendance_and_task_tracker">Attendance Tracker</string>
 </resources>
